--- a/Martify/App.xaml
+++ b/Martify/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="/Resources/xaml_resources/TriggerRes.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/xaml_resources/FontRes.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/xaml_resources/MainResource.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Resources/xaml_resources/ImageRes.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
