--- a/Martify/Resources/XAML/MainResource.xaml
+++ b/Martify/Resources/XAML/MainResource.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:viewmodel="clr-namespace:Martify.ViewModel"
+                    xmlns:ViewModels="clr-namespace:Martify.ViewModels"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <viewmodel:MainViewModel x:Key="MainVModel"></viewmodel:MainViewModel>
+    <ViewModels:MainViewModels x:Key="MainVModel"></ViewModels:MainViewModels>
     
     <Storyboard x:Key="GradientRotateStoryboard"
                     RepeatBehavior="Forever">
