--- a/Martify/Views/SidePanel.xaml
+++ b/Martify/Views/SidePanel.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Martify.UserCtrl.PanelUC"
+﻿<UserControl x:Class="Martify.Views.SidePanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -142,7 +142,7 @@
                                                              DecelerationRatio="0.6"
                                                              From="0"
                                                              To="160"
-                                                             Duration="0:0:0.75" />
+                                                             Duration="0:0:0.5" />
                                         </Storyboard>
                                     </BeginStoryboard>
                                     <RemoveStoryboard BeginStoryboardName="Stop_Indicator" />
@@ -156,7 +156,7 @@
                                                              DecelerationRatio="0.6"
                                                              From="160"
                                                              To="0"
-                                                             Duration="0:0:0.75" />
+                                                             Duration="0:0:0.5" />
                                         </Storyboard>
                                     </BeginStoryboard>
                                     <RemoveStoryboard BeginStoryboardName="Release_Indicator" />
@@ -200,8 +200,8 @@
                                                              Storyboard.TargetProperty="Width"
                                                              From="160"
                                                              To="0"
-                                                             BeginTime="0:0:0.5"
-                                                             Duration="0:0:1" />
+                                                             BeginTime="0:0:0.15"
+                                                             Duration="0:0:0.55" />
                                         </Storyboard>
                                     </BeginStoryboard>
                                 </MultiTrigger.ExitActions>
