--- a/Martify/Resources/XAML/FontRes.xaml
+++ b/Martify/Resources/XAML/FontRes.xaml
@@ -3,4 +3,5 @@
     <FontFamily x:Key="YanoneKaffeesatz">/Martify;component/Resources/Fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz</FontFamily>
     <FontFamily x:Key="PasseroOne">/Martify;component/Resources/Fonts/PasseroOne-Regular.ttf#Passero One</FontFamily>
     <FontFamily x:Key="BungeeSpice">/Martify;component/Resources/Fonts/BungeeSpice-Regular.ttf#Bungee Spice</FontFamily>
+    <FontFamily x:Key="Rubik">/Martify;component/Resources/Fonts/Rubik-Regular.ttf#Rubik</FontFamily>
 </ResourceDictionary>
