--- a/Martify/MainWindow.xaml
+++ b/Martify/MainWindow.xaml
@@ -31,8 +31,8 @@
                         <RowDefinition Height="2.75*"/>
                     </Grid.RowDefinitions>
 
-                    <Border Grid.Row="0" Background="#4853b6" CornerRadius="30,30,0,0"></Border>
-                    <Border Grid.Row="1" Background="#FF626DDF" CornerRadius="0,0,30,30"></Border>
+                    <Border Grid.Row="0" Background="#48B7FF" CornerRadius="30,30,0,0"></Border>
+                    <Border Grid.Row="1" Background="#6DC6FE" CornerRadius="0,0,30,30"></Border>
                     
                     <Grid Grid.Row="1">
                         <uc:SidePanel Margin="0,30,0,0" HorizontalAlignment="Left"></uc:SidePanel>
