--- a/Martify/Resources/XAML/MainResource.xaml
+++ b/Martify/Resources/XAML/MainResource.xaml
@@ -2,7 +2,7 @@
                     xmlns:ViewModels="clr-namespace:Martify.ViewModels"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <ViewModels:MainViewModels x:Key="MainVModel"></ViewModels:MainViewModels>
+    <ViewModels:MainVMs x:Key="MainVModel"></ViewModels:MainVMs>
     
     <Storyboard x:Key="GradientRotateStoryboard"
                     RepeatBehavior="Forever">
