--- a/Martify/App.xaml
+++ b/Martify/App.xaml
@@ -2,6 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Martify"
+             
+             xmlns:vm="clr-namespace:Martify.ViewModels"
+             xmlns:view="clr-namespace:Martify.Views"
+             
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -12,6 +16,16 @@
                 <ResourceDictionary Source="/Resources/XAML/MainResource.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/XAML/ImageRes.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
+
+
+
+            <DataTemplate DataType="{x:Type vm:DashboardVM}">
+                <view:Dashboard />
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:ProductsVM}">
+                <view:Products />
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
