--- a/Martify/Views/SidePanel.xaml
+++ b/Martify/Views/SidePanel.xaml
@@ -262,7 +262,8 @@
                                 <ControlTemplate>
                                     <RadioButton IsChecked="{Binding Path=IsSelected, 
                                                                        RelativeSource={RelativeSource TemplatedParent}}"
-                                                 GroupName="SidePanelGroup">
+                                                 GroupName="SidePanelGroup"
+                                                 Command="{Binding DataContext.Navigation.DashboardCommand, ElementName=ucPanel}">
                                         <RadioButton.Style>
 
                                             <Style TargetType="RadioButton"
@@ -292,14 +293,15 @@
                         </Setter>
                     </Style>
 
-                    <Style x:Key="placeholder_listboxitem_style"
+                    <Style x:Key="products_listboxitem_style"
                            TargetType="ListBoxItem">
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate>
                                     <RadioButton IsChecked="{Binding Path=IsSelected, 
                                                                        RelativeSource={RelativeSource TemplatedParent}}"
-                                                 GroupName="SidePanelGroup">
+                                                 GroupName="SidePanelGroup"
+                                                 Command="{Binding DataContext.Navigation.ProductsCommand, ElementName=ucPanel}">
 
                                         <RadioButton.Style>
 
@@ -307,9 +309,9 @@
                                                    BasedOn="{StaticResource SidePanelStyle}">
 
                                                 <Setter Property="TextBlock.Text"
-                                                        Value="Linh tinh" />
+                                                        Value="Products" />
                                                 <Setter Property="Content"
-                                                        Value="LINH TINH" />
+                                                        Value="PRODUCTS" />
 
                                                 <Setter Property="Tag"
                                                         Value="{StaticResource User}" />
@@ -472,9 +474,9 @@
                              Style="{StaticResource dashboard_listboxitem_style}"
                              IsSelected="True"/>
 
-                <ListBoxItem x:Name="placeholder_sidepanel_listboxitem"
+                <ListBoxItem x:Name="products_sidepanel_listboxitem"
                              Grid.Row="1"
-                             Style="{StaticResource placeholder_listboxitem_style}" />
+                             Style="{StaticResource products_listboxitem_style}" />
 
                 <ListBoxItem x:Name="customer_sidepanel_listboxitem"
                              Grid.Row="2"
