--- a/Martify/App.xaml
+++ b/Martify/App.xaml
@@ -2,30 +2,22 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Martify"
-             
-             xmlns:vm="clr-namespace:Martify.ViewModels"
-             xmlns:view="clr-namespace:Martify.Views"
-             
              StartupUri="MainWindow.xaml">
+    
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+
                 <ResourceDictionary Source="/Resources/XAML/MaterialDesignRes.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/XAML/TriggerRes.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/XAML/FontRes.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/XAML/MainResource.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/XAML/ImageRes.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Resources/XAML/ViewRes.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Resources/XAML/StyleRes.xaml"></ResourceDictionary>
+
             </ResourceDictionary.MergedDictionaries>
-
-
-
-            <DataTemplate DataType="{x:Type vm:DashboardVM}">
-                <view:Dashboard />
-            </DataTemplate>
-            <DataTemplate DataType="{x:Type vm:ProductsVM}">
-                <view:Products />
-            </DataTemplate>
-
         </ResourceDictionary>
     </Application.Resources>
+    
 </Application>
