--- a/Martify/Resources/XAML/StyleRes.xaml
+++ b/Martify/Resources/XAML/StyleRes.xaml
@@ -2,48 +2,128 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 
+    <Style x:Key="Page_RadarReveal_Style" TargetType="{x:Type UserControl}">
 
-    <Style x:Key="Page_Style"
-           TargetType="{x:Type UserControl}">
-
-        <Setter Property="RenderTransform">
+        <Setter Property="Opacity" Value="0"/>
+        <Setter Property="OpacityMask">
             <Setter.Value>
-                <TranslateTransform X="0"
-                                    Y="50" />
+                <RadialGradientBrush Center="0,0" RadiusX="0" RadiusY="0" GradientOrigin="0,0">
+                    <GradientStop Color="Black" Offset="0.8" />
+                    <GradientStop Color="Transparent" Offset="1" />
+                </RadialGradientBrush>
             </Setter.Value>
         </Setter>
 
         <Style.Triggers>
-
-            <Trigger Property="Visibility"
-                     Value="Collapsed">
-
-                <Setter Property="Opacity"
-                        Value="0" />
-
-            </Trigger>
-
             <EventTrigger RoutedEvent="Loaded">
                 <BeginStoryboard>
                     <Storyboard>
                         <DoubleAnimation Storyboard.TargetProperty="Opacity"
-                                         Duration="0:0:1"
-                                         From="0"
-                                         To="1" />
-                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TranslateTransform.Y)"
-                                         From="50"
-                                         To="0"
-                                         Duration="0:0:0.8"
-                                         DecelerationRatio="0.6" />
+                                         From="0" To="1" Duration="0:0:0.5" />
+
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.OpacityMask).(RadialGradientBrush.RadiusX)"
+                                         From="0" To="1.5" Duration="0:0:1.5">
+                            <DoubleAnimation.EasingFunction>
+                                <CubicEase EasingMode="EaseOut"/>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.OpacityMask).(RadialGradientBrush.RadiusY)"
+                                         From="0" To="1.5" Duration="0:0:1.5">
+                            <DoubleAnimation.EasingFunction>
+                                <CubicEase EasingMode="EaseOut"/>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger>
-
         </Style.Triggers>
+    </Style>
 
+
+    <Style x:Key="Page_CinematicFocus_Style" TargetType="{x:Type UserControl}">
+
+        <Setter Property="Opacity" Value="0"/>
+        <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
+        <Setter Property="RenderTransform">
+            <Setter.Value>
+                <ScaleTransform ScaleX="1.2" ScaleY="1.2"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Effect">
+            <Setter.Value>
+                <BlurEffect Radius="20" KernelType="Gaussian"/>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="Loaded">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                                         From="0" To="1" Duration="0:0:0.6"/>
+
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleX)"
+                                         From="0.5" To="1" Duration="0:0:0.8">
+                            <DoubleAnimation.EasingFunction>
+                                <CubicEase EasingMode="EaseOut"/>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(ScaleTransform.ScaleY)"
+                                         From="0.5" To="1" Duration="0:0:0.8">
+                            <DoubleAnimation.EasingFunction>
+                                <CubicEase EasingMode="EaseOut"/>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.Effect).(BlurEffect.Radius)"
+                                         From="20" To="0" Duration="0:0:0.8"/>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </Style.Triggers>
     </Style>
     
     
     
+    
+    
+
+    <Style x:Key="Page_SpiralIn_Style" TargetType="{x:Type UserControl}">
+        <Style.Setters>
+            <Setter Property="Opacity" Value="0"/>
+            <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
+            <Setter Property="RenderTransform">
+                <Setter.Value>
+                    <TransformGroup>
+                        <ScaleTransform ScaleX="0" ScaleY="0"/>
+                        <RotateTransform Angle="-180"/>
+                    </TransformGroup>
+                </Setter.Value>
+            </Setter>
+        </Style.Setters>
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="Loaded">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0" To="1" Duration="0:0:0.8"/>
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)" From="0" To="1" Duration="0:0:0.8"/>
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)" From="0" To="1" Duration="0:0:0.8"/>
+                        <DoubleAnimation Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[1].(RotateTransform.Angle)" 
+                                         From="-180" To="0" Duration="0:0:0.8">
+                            <DoubleAnimation.EasingFunction>
+                                <BackEase EasingMode="EaseOut" Amplitude="0.3"/>
+                            </DoubleAnimation.EasingFunction>
+                        </DoubleAnimation>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </Style.Triggers>
+    </Style>
+
+
+
+
 
 </ResourceDictionary>
