--- a/Martify/App.xaml
+++ b/Martify/App.xaml
@@ -2,9 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Martify"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LoginWindow.xaml">
     
     <Application.Resources>
+        
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
 
@@ -21,3 +22,4 @@
     </Application.Resources>
     
 </Application>
+    
