--- a/Martify/Resources/XAML/MainResource.xaml
+++ b/Martify/Resources/XAML/MainResource.xaml
@@ -1,9 +1,10 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:ViewModels="clr-namespace:Martify.ViewModels"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+﻿<ResourceDictionary 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:ViewModels="clr-namespace:Martify.ViewModels"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <ViewModels:MainVM x:Key="MainVM"></ViewModels:MainVM>
-    
+
     <Storyboard x:Key="GradientRotateStoryboard"
                     RepeatBehavior="Forever">
         <DoubleAnimation Storyboard.TargetName="AnimatedBorderBrush"
