Refactor: Remove unused event handlers and bindings
Simplified the codebase by removing redundant event handlers
and bindings:

- Removed `IsEnabled` property binding from the `<Button>`
  in `LoginWindow.xaml` to simplify button behavior.
- Deleted the unused `WindowControl_Loaded` event handler
  from `LoginWindow.xaml.cs` and `MainWindow.xaml.cs`.
- Removed `Loaded="WindowControl_Loaded"` attributes from
  `<ContentControl>` and `<uc:WindowControl>` in
  `MainWindow.xaml`.

These changes improve code maintainability and readability.

--- a/Martify/MainWindow.xaml
+++ b/Martify/MainWindow.xaml
@@ -64,16 +64,14 @@
                 
                 <Grid Grid.Column="1">
                     <ContentControl x:Name="Pages"
-                                    Content="{Binding Navigation.CurrentView}" Loaded="WindowControl_Loaded"></ContentControl>
+                                    Content="{Binding Navigation.CurrentView}"></ContentControl>
                 </Grid>
 
             </Grid>
         
-            
         </Border>
 
 
-
-        <uc:WindowControl Loaded="WindowControl_Loaded"/>
+        <uc:WindowControl/>
     </Grid>
 </Window>
